--- a/templates/acercade.html
+++ b/templates/acercade.html
@@ -16,7 +16,8 @@
     <br> Emp por empleo, que es a dia de hoy lo que mucha gente busca y necesita. 
     <br>
     <br> Aparte, es facil de recordar por la mitica expresion argentina y la tipica pregunta de "¿Che, no tenes un laburito para mi?
-
+    <br> 
+    <br> ¡Buen viaje, exítos encontrando tu empleo y espero que sea en este lugar! 
 
 
 </p>
