--- a/templates/mensajes/contacto.html
+++ b/templates/mensajes/contacto.html
@@ -29,9 +29,12 @@
             </div>        
                     {% else %}
                     <!-- Button trigger modal -->
-                    <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        Enviar Mensaje
-                    </button>
+                    <div style="text-align: center; margin-top: 2%;">
+
+                        <button type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            Enviar Mensaje
+                        </button>
+                    </div>
 
                     <!-- Modal -->
                     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
