--- a/templates/empleos/listar_empleos.html
+++ b/templates/empleos/listar_empleos.html
@@ -62,7 +62,7 @@
         <div class="col-md-4 mb-3">
             <div class="card" style="text-align: center;">
                 <div class="card-img-top" style="display: block; width: 70%; margin: auto;">
-                    <img src="{{ e.imagen.url }}" class="card-img-top w-50" alt="{{e.titulo}}">
+                    <img src="{{ e.imagen.url }}" style="height: 92px; width: 115;" class="card-img-top w-50" alt="{{e.titulo}}">
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">{{e.titulo}}</h5>
