--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -7,6 +7,9 @@
 {% include 'navegacion.html' %}
 {% endblock %}
 {% block contenido %}
+<h3 style="text-align: center; margin:2%; color: #185fbe;">
+    Inicio
+</h3>
 <div style="text-align: center; margin-top: 2%;">
     <div style="display: inline-block; margin-right: 15%; align-items: center ;">
         <h2>Presiona aqui para <br> ver nuestros <a tyle="color:#185fbe" href="{% url 'apps.empleos:listar_empleos' %}">Empleos</a></h2>
@@ -19,6 +22,32 @@
             dudes en hacerlo, esta pagina es hecha por <br>
             y para todos, ¡Buen viaje!</h5>
     </div>
-</div> 
-<div><p>a</p></div>
+</div>
+    <div class="row">
+        <h4 style="text-align: center; margin:2%; color: #185fbe;">Empleos mas recientes</h4>
+    {% for e in empleos_recientes %}
+    <div class="col-md-4 mb-3">
+        <div class="card" style="text-align: center;">
+            <div class="card-img-top" style="display: block; width: 70%;margin: auto;">
+                <img src="{{ e.imagen.url }}" class="card-img-top w-50" style="height: 92px; width: 115;" alt="{{e.titulo}}">
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">{{e.titulo}}</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Empresa: {{e.nombre_empresa}}</li>
+                <li class="list-group-item">Categoria: {{e.categoria}}</li>
+                <li class="list-group-item">Agregado por: {{e.colaborador}}</li>
+            </ul>
+                   <p style='text-align: center; margin-top: 2%;' class="mbr-timeline-date "><small
+                            class="text-body-secondary">{{e.fecha_agregado}}</small></p>
+            <div class="card-body">
+                <a href="{% url 'apps.empleos:empleo_detalle' e.id %}" class="btn btn-primary"
+                    style="font-size: small;">Leer
+                    más</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
